# resonance-shot

./: .clang-format  .cmake-format.py  CMakeLists.txt  mise.toml
.github/workflows/: test.yml
Shaders/: Floor.metal  Triangle.metal
Source/: GpuWindow.cpp  GpuWindow.hpp  Math.cpp  Math.hpp  SdlRuntime.cpp  SdlRuntime.hpp  main.cpp
Tests/: MathTests.cpp
cmake/: Dependencies.cmake  FloorShader.hpp.in  TriangleShader.hpp.in
scripts/: format
